tests/ui/missing_response_type.stderr
error: Invalid response format. Expected: <status>: <type> - <description>
  --> tests/ui/missing_response_type.rs:10:1
   |
10 | /// 204: Todo item deleted successfully
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
