tests/ui/missing_response_type.rs
#![allow(unused_imports)]
use rovo::aide::axum::IntoApiResponse;
use axum::response::Json;
use rovo::rovo;

/// Delete handler
///
/// # Responses
///
/// 204: Todo item deleted successfully
#[rovo]
async fn test_handler() -> impl IntoApiResponse {
    Json("test".to_string())
}

fn main() {}
